--- a/Aula 7/style.css
+++ b/Aula 7/style.css
@@ -1,26 +1,35 @@
 body {
     background-color: rgb(223,215,185);
-    font-style: rgb(51,51,51);
-
+    color: rgb(51,51,51);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    font-style: #0d1b97;
-
+    color: #0d1b97;
+    font-family:'Times New Roman', Times, serif;    
+    font-size: 40px;
 }
 
-job-title {
+.job-title {
     background-color:#1726ad;
-    font-style:  #898dbe;
+    color:  #898dbe;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px 10px 5px 10px;
 
 }
-.high {
-    font-style: rgb(13, 27, 151);
+#high {
+    color: rgb(13, 27, 151);
 
 }
 
 ul {
     background-color:#333333;
-    font-style: rgb(223, 215, 185);
+    color: rgb(223, 215, 185);
+    padding: 10px;
 }
+h2 {
+    font-size: 20px;
+}
+
 
