--- a/Atividade 10/style.css
+++ b/Atividade 10/style.css
@@ -1,123 +1,133 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
-    box-sizing: border-box;
-  }
-  
-  .barDiscount {
-    width: 100%; /*Largura do elemento*/
-    height: 38px; /*Altura*/
-    background: #1cd1b0; /*cor de fundo*/
-    font-size: 15px; /*tamanho da fonte*/
-    font-weight: 400; /*define peso da fonte*/
-    line-height: 17px;/*define altura de cada linha*/
-    padding: 10px;
-   
-  }
-  
-  .header {
-  
-    width: 100%;
-    height: 101px;
-    background: #00669f;
-    box-shadow: 0px 10px 7px 0px #00000040;
-    position: sticky;
-    z-index: 1;
-    top: 0px;
-  
-  }
-  
-  .header h1 {
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 47px;
-    padding: 24px;
-  }
-  
-  main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 86px;
-  }
-  .card-container {
-    width: 834px;
-    height: 597px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .bg {
-    position: relative;
-    width: 374px;
-    height: 217px;
-  }
-  
-  .batman {
-    background-image: url(./img.png/Imagem\ de\ fundo\ batman.png);
-  }
-  .arlequina {
-    background-image: url(./img.png/imagem\ de\ fundo\ alerquina.png);
-  }
-  
-  .hero-img {
-    border-radius: 50%;
-    position: absolute;
-    bottom: -25%;
-    right: 32%;
-  }
-  
-  .icon-heart {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-  }
-  
-  .card {
-    width: 374px;
-    height: 597px;
-    background: #f3f3f3;
-    box-shadow: 0px 4px 4px 0px #00000040;
-  }
-  
-  .text-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 300px;
-    align-items: center;
-    margin: 20px auto;
-  }
-  
-  .text-card h2 {
-    margin: 43px;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 35px;
-  }
-  
-  .text-card p {
-    text-align: center;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #333;
-  }
-  .text-card button {
-    background: #00669f;
-    padding: 17px 35px;
-    color: #f3f3f3;
-    border: none;
-    margin-top: 23px;
-  }
-  
-  footer {
-    height: 51px;
-    background: #00669f;
-    padding: 16px 28px;
-    color: #f3f3f3;
-    margin-top: 151px;
-  }
-  
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif; /*tipo da fonte a ser aplicada*/
+  box-sizing: border-box;
+}
+
+.barDiscount {
+  width: 100%;
+  /*Largura do elemento*/
+  height: 38px;
+  /*Altura*/
+  background: #1cd1b0;
+  /*cor de fundo*/
+  font-size: 15px;
+  /*tamanho da fonte*/
+  font-weight: 400;
+  /*define peso da fonte*/
+  line-height: 17px;
+  /*define altura de cada linha*/
+  padding: 10px;
+
+}
+
+.header { /*cabeçalho*/
+
+  width: 100%;
+  height: 101px;
+  background: #00669f;
+  box-shadow: 0px 10px 7px 0px #00000040;
+  position: sticky;
+  z-index: 1;
+  top: 0px;
+
+}
+
+.header h1 {
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 47px;
+  padding: 24px;
+}
+
+main { /* main conteudo principal*/
+  display: flex;
+  justify-content: center;
+  /*centralizando main geral*/
+  align-items: center;
+  /*centralizando itens*/
+  margin-top: 86px;
+}
+
+.card-container {
+  width: 834px; /*largura do elemento*/
+  height: 597px; /*altura do elemento*/
+  display: flex; 
+  justify-content: space-between; /*espaçando elementos proporcionalmente*/
+  align-items: center; /*centrlizando elementos*/
+}
+
+.bg {
+  position: relative; /*se desloca de acordo com top/left/button/rigth*/
+  width: 374px; /*largura do elemento*/
+  height: 217px; /* altura do elemento*/
+}
+
+.batman {
+  background-image: url(./img.png/Imagem\ de\ fundo\ batman.png); /*Fundo de imagem*/
+}
+
+.arlequina {
+  background-image: url(./img.png/imagem\ de\ fundo\ alerquina.png);
+}
+
+.hero-img {
+  border-radius: 50%; /*formato da imagem, neste caso ficara com formato de circulo*/
+  position: absolute; /*posição sem movimentação*/
+  bottom: -25%; /*altura de baixo do elemento*/
+  right: 32%; /*movimento do elemento para á direita*/
+}
+
+.icon-heart {
+  position: absolute;
+  left: 20px; /*movimento do elemento para á esquerda*/
+  top: 20px;/*movimento para o topo do elemento*/
+}
+
+.card {
+  width: 374px; /*largura do elemento*/
+  height: 597px; /*altura do elemento*/
+  background: #f3f3f3; /*cor do texto*/
+  box-shadow: 0px 4px 4px 0px #00000040; /*sombra*/
+}
+
+.text-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 300px; /*largura do elemento*/
+  align-items: center;
+  margin: 20px auto;
+}
+
+.text-card h2 {
+  margin: 43px;
+  font-size: 30px; /*tamanho da fonte*/
+  font-weight: 400; /*peso da fonte*/
+  line-height: 35px; /*espaçamento entre as linhas*/
+}
+
+.text-card p {
+  text-align: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #333;
+}
+
+.text-card button {
+  background: #00669f;
+  padding: 17px 35px;  /*espaçamento entre o conteudo*/
+  color: #f3f3f3;
+  border: none; /*sem borda por conta do uso do "none"*/
+  margin-top: 23px; /*espaçamento do elemento até o topo*/
+}
+
+footer { /*footer utilizado par rodapé*/
+  height: 51px;
+  background: #00669f;
+  padding: 16px 28px;
+  color: #f3f3f3;
+  margin-top: 151px;
+}
